# src/docs/swagger.yaml
@@ -493,7 +493,19 @@ paths:
           $ref: '#/definitions/dto.UserUpdateRequest'
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: User updated successfully
+          schema:
+            $ref: '#/definitions/dto.UserResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "403":
+          description: You are not allowed to update this user's data
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
       security:
       - BearerAuth: []
       summary: Update user location
@@ -514,7 +526,19 @@ paths:
           $ref: '#/definitions/dto.LoginUserRequest'
       produces:
       - application/json
-      responses: {}
+      responses:
+        "200":
+          description: User logged in successfully
+          schema:
+            $ref: '#/definitions/dto.UserResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Invalid credentials
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
       summary: Login a user
       tags:
       - users
